--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Interactive rating component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -16,34 +16,46 @@
 </head>
 <body>
 
-  <!-- Rating state start -->
+  <div class="container">
+    <!-- Rating state start -->
 
-  How did we do?
+  <h1 class="myH1">How did we do?</h1>
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+  <p class="myP">
+    Please let us know how we did with your support <br> request. All feedback is appreciated 
+    to help us <br> improve our offering!
+  </p>
 
-  1 2 3 4 5
+  <div class="ratings" id="yourRightings">
+    <button class="btns" id="ratingBtn">1</button>
+    <button class="btns" id="ratingBtn">2</button>
+    <button class="btns" id="ratingBtn">3</button>
+    <button class="btns" id="ratingBtn">4</button>
+    <button class="btns" id="ratingBtn">5</button>
+  </div>
 
-  Submit
+  <button id="submitBtn" class="submit">Submit</button>
+</div>
 
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
 
-  You selected <!-- Add rating here --> out of 5
+  <!-- You selected Add rating here out of 5
 
   Thank you!
 
   We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
+  don’t hesitate to get in touch! -->
 
   <!-- Thank you state end -->
 
-  
+<!--   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">khallo</a>.
   </div>
+  </div> -->
+  
 </body>
 </html>
